--- a/karos.css
+++ b/karos.css
@@ -1,3 +1,10 @@
+.sfondo {
+
+  display: none;
+  background-color: #1f1f1f;
+}
+
+
 .titolo {
   position: absolute;
   display: none;
@@ -5,6 +12,7 @@
   filter: drop-shadow(0 5px 5px rgb(255, 255, 255));
   margin-left: 800px;
   width: 400px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
@@ -92,27 +100,31 @@
 
 
 .civil img {
-  margin-top: 26%;
-  margin-left: -20px;
-  width: 350px;
+  margin-top: 16%;
+  margin-left: -25px;
+  width: 330px;
+  animation: Krs 2s ease 0s 1 normal forwards;
 }
 
 .gangster img {
-  margin-top: 20%;
-  margin-left: 10px;
-  width: 150px;
+  margin-top: 16%;
+  margin-left: -25px;
+  width: 330px;
+  animation: Krs 2s ease 0s 1 normal forwards;
 }
 
 .mafia img {
-  margin-top: 6%;
-  margin-left: 10px;
-  width: 150px;
+  margin-top: 16%;
+  margin-left: -25px;
+  width: 330px;
+  animation: Krs 2s ease 0s 1 normal forwards;
 }
 
 .imprenditore img {
-  margin-top: 15%;
-  margin-left: 10px;
-  width: 170px;
+  margin-top: 16%;
+  margin-left: -25px;
+  width: 330px;
+  animation: Krs 2s ease 0s 1 normal forwards;
 }
 
 * {
@@ -139,3 +151,31 @@
   transform: scale(1.1);
 }
 
+/* Animazione */
+@keyframes Krs {
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
+
+  15% {
+    transform: translateX(-30px) rotate(-6deg);
+  }
+
+  30% {
+    transform: translateX(15px) rotate(6deg);
+  }
+
+  45% {
+    transform: translateX(-15px) rotate(-3.6deg);
+  }
+
+  60% {
+    transform: translateX(9px) rotate(2.4deg);
+  }
+
+  75% {
+    transform: translateX(-6px) rotate(-1.2deg);
+  }
+}
